feat(francesco_urso): creato file per creazione esercitazione 3

--- a/src/francesco_urso/INDEX.html
+++ b/src/francesco_urso/INDEX.html
@@ -9,41 +9,44 @@
     <link rel="stylesheet" type="text/css" media="screen" href="main.css" />
   </head>
   <body>
-    <section id="menù">
-      <h1>Menù</h1>
-    </section>
-    <nav>
-      <section class="container">
-        <div class="column">
-          <h2>Lessons</h2>
-          <ul>
-            <li>
-              <a href="../francesco_urso/html/MARKDOWN.html">Markdown</a>
-            </li>
-            <li><a href="../francesco_urso/html/GIT.html">Git</a></li>
-            <li><a href="../francesco_urso/html/HTML.html">HTML</a></li>
-            <li><a href="../francesco_urso/html/CSS.html">CSS</a></li>
-          </ul>
-        </div>
-        <div class="column">
-          <h2>Helpers</h2>
-          <ul>
-            <li>
-              <a href="../francesco_urso/html/MARKDOWN_SHEET.html">Markdown Sheet</a>
-            </li>
-            <li>
-              <a href="../francesco_urso/html/GIT_SHEET.html">Git Sheet</a>
-            </li>
-            <li>
-              <a href="../francesco_urso/html/HTML_SHEET.html">HTML Sheet</a>
-            </li>
-            <li>
-              <a href="../francesco_urso/html/CSS_SHEET.html">CSS Sheet</a>
-            </li>
-          </ul>
-        </div>
-      </section>
-    </nav>
+    <header>
+      <nav>
+        <section class="container">
+          <div class="column">
+            <h2 class="center">Lessons</h2>
+            <section class="center">
+              <ul>
+                <li>
+                  <a href="../francesco_urso/html/MARKDOWN.html">Markdown</a>
+                </li>
+                <li><a href="../francesco_urso/html/GIT.html">Git</a></li>
+                <li><a href="../francesco_urso/html/HTML.html">HTML</a></li>
+                <li><a href="../francesco_urso/html/CSS.html">CSS</a></li>
+              </ul>
+            </section>
+          </div>
+          <div class="column">
+            <h2 class="center">Helpers</h2>
+            <section class="center">
+              <ul>
+                <li>
+                  <a href="../francesco_urso/html/MARKDOWN_SHEET.html">Markdown Sheet</a>
+                </li>
+                <li>
+                  <a href="../francesco_urso/html/GIT_SHEET.html">Git Sheet</a>
+                </li>
+                <li>
+                  <a href="../francesco_urso/html/HTML_SHEET.html">HTML Sheet</a>
+                </li>
+                <li>
+                  <a href="../francesco_urso/html/CSS_SHEET.html">CSS Sheet</a>
+                </li>
+              </ul>
+            </section>
+          </div>
+        </section>
+      </nav>
+    </header>
     <footer>
       <section class="left">
         <img id="logo" src="../francesco_urso/img/logo-sja-150x38.png" alt="Steve Jobs Academy" />
